Fix bug with inactive navbar - z-index changed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,9 @@ body{
     padding: 0;
     border: none;
 }
+header, footer{
+    z-index: 9;
+}
 
 /** -------------------------------- HEADER -------------------------- **/
 header{
